Travel::Routing::DE::VRR 2.07 - Fri Aug 08 2014

    * Add URLs for several austrian EFA services
      (pointed out by Gregor Herrmann)
    * Support EFA services which do not distinguish between scheduled
      and realtime data (also pointed out by Gregor Herrmann)
    * efa: Add -D/--discover option
    * efa: Add -A/--auto-url option
    * Travel::Routing::DE::EFA: Add get_efa_urls method
    * efa: Remove --post option from documentation (it has not been supported
      since version 1.04)

Travel::Routing::DE::VRR 2.06 - Sat Aug 02 2014

    * Route::Part: Add {arrival,departure}_{route,station}maps accessors
    * efa: Add -m / --maps option
    * Fix exclude / --exclude (didn't work at all previously, possibly
      because of a server-side API change)

Travel::Routing::DE::VRR 2.05 - Mon Mar 03 2014

    * Move all logic to Travel::Routing::DE::EFA and require an EFA url to
      be set. This way, any EFA service is supported.
      Travel::Routing::DE::VRR now calls ::EFA with the VRR url, so there are
      no backwards-incompatible changes
    * Improve error messages for missing route data and backend errors
    * Add option to specify maximum number of connections (efa -n)
    * efa: add -f / --full-route option
    * efa: add -u / --efa-url option

Travel::Routing::DE::VRR 2.04 - Tue Jan 07 2014

    * efa: Handle UTF8 in place/stop input
    * Travel::Routing::DE::VRR: Handle decoded input with non-ASCII characters

Travel::Routing::DE::VRR 2.03 - Thu Jul 4 2013

    * Disable smartmatch warnings on perl >= 5.018

Travel::Routing::DE::VRR 2.02 - Wed Apr 10 2013

    * Patch by Roland Hieber: respect proxy environment variables

Travel::Routing::DE::VRR 2.01 - Thu Jan 26 2012

    * Fix bug in departure_stop_and_platform where the arrival_stop was used
      in case of unknown platforms
    * Document -E / --extended-info in efa(1)

Travel::Routing::DE::VRR 2.00 - Sun Dec 11 2011

    * Now uses the efa.vrr.de XML interface